traduction et uniformisation des erreurs Beachcomber
